chore: set up project structure and add middleware code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "declaration": true,
+    // "declarationMap": true, // Optional
+    "sourceMap": true, // Optional
+    "moduleResolution": "node"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
